k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  type: ClusterIP
  ports:
    - port: 5080
      targetPort: 80
  selector:
    component: api
