k8s/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    component: client
