k8s/mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    component: mysql
